app/next-app/next-app-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: next-app-service
  name: next-app
spec:
  rules:
    - host: next-app.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: next-app
                port:
                  number: 80
